[package]
name = "tiktokapi-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12"
oauth2 = { version = "4.4", optional = true }
reqwest = { version = "0.11", features = ["json"], default-features = false, optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"], optional = true }
thiserror = "1"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
retry = ["tokio"]
oauth = ["oauth2"]

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
anyhow = "1"