[package]
name = "oauth-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tower-cookies = "0.10.0"
tiktokapi-v2 = { path="../..", features = ["rustls-tls"], default-features = false }
url = "2.5"